--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class = "MeetBarbers"
       <table>
         <tr>
-          <td><img src="barber4.jpeg", alt = "barber4"></td>
+          <td><img src="barber4.jpeg", alt = "barber4", width="100"></td>
           <td><img src="barber2.jpeg, alt = "barber2"></td>
           <td><img src="barber3.jpeg", alt = "barber3"></td>
         </tr>
