--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <div class = "MeetBarbers"
       <table>
         <tr>
-          <td><img src="barber4.jpeg", alt = "barber4", width = "50"></td>
-          <td><img src="barber2.jpeg", alt = "barber2", width = "50"></td>
-          <td><img src="barber3.jpeg", alt = "barber3", width = "50"></td>
+          <td><img src="barber4.jpeg", alt = "barber4", width = 25%></td>
+          <td><img src="barber2.jpeg", alt = "barber2", width = 25%></td>
+          <td><img src="barber3.jpeg", alt = "barber3", width = 25%></td>
         </tr>
         <tr>
           <td>Serg Man</td>
