--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           <td>Joakim Jiminez</td>
         </tr>
       </table>
-
+    </div>
+    
     <div class = "Contact Form">
       <h1>
         Contact Us
