--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel = "stylesheet" href="barberwebsite.css">
     <title>AZ's Barbershop</title>
   </head>
-  
+
   <body>
 
-    <div class = "header">
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html"></a>Home</li>
+          <li><a href="MeetBarber.html"></a>Our Barbers</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
       <h1>
         AZ's Barber Shop
-        
       </h1>
       <p>
         The best barbershop in Worcester
       </p>
-    </div>
+    </header>
 
     <div class = "pricing">
       <table>
