--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </p>
     </header>
 
-    <div class = "pricing">
+    <section>
       <table>
         <tr>
           <th>Service</th>
@@ -50,42 +50,6 @@
           <td>$25</td>
         </tr>
       </table>
-    </div>
-
-    <div class = "MeetBarbers"
-      <table>
-        <tr>
-          <td><img src="barber4.jpeg", alt = "barber4", width = 150></td>
-          <td><img src="barber2.jpeg", alt = "barber2", width = 150></td>
-          <td><img src="barber3.jpeg", alt = "barber3", width = 150></td>
-        </tr>
-        <tr>
-          <td>Serg Man</td>
-          <td>Lincoln Trought</td>
-          <td>Joakim Jiminez</td>
-        </tr>
-      </table>
-    </div>
-
-    <div class = "Contact Form">
-      <h1>
-        Contact Us
-      </h1>
-      <form action = "Contact_Action.php">
-        <label for="fname">First Name</label>
-          <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-        <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-        <label for="phonenum">Phone Number</label>
-          <input type="text" id="phonenum" name="Phone Number" placeholder="Your Phone Number..">
-
-        <input type="submit" value="Submit">
-      
-        </form>
-    </div>
-
-    
+    </section> 
   </body>
 </html>
