--- a/MeetBarber.html
+++ b/MeetBarber.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel = "stylesheet" href="barberwebsite.css">
+    <link rel = "stylesheet" href="style.css">
     <title>AZ's Barbershop</title>
   </head>
 
@@ -37,6 +37,6 @@
         </tr>
       </table>
     </section>
-      
+
   </body>
 </html>
