--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section class= "bookservice">
         <div class="bookserviceheader">
-          <a href="#homepage"><div class="bookservicebutton"> Book An Appointment</div></a>
+          <a href="#ourlocation"><div class="bookservicebutton"> Book An Appointment</div></a>
         </div>
     </section>
 
@@ -85,7 +85,7 @@
         <table>
           <tr>
             <td class="tablebody"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2952.3670038175237!2d-71.8021783852406!3d42.27068854873475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e4065cf06a2fe1%3A0x10d0de011f3b3cee!2s100%20Main%20St%2C%20Worcester%2C%20MA%2001605!5e0!3m2!1sen!2sus!4v1637196546947!5m2!1sen!2sus"
-            width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe></td>
+            width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe></td>
             <td class="tablebody"><h2>Hours</h2><h3>Monday: 9am-7pm</h3><h3>Tuesday: 9am-7pm</h3><h3>Wednesday: 9am-7pm</h3><h3>Thursday: 9am-7pm</h3><h3>Friday: 9am-7pm</h3><h3>Saturday: 9am-7pm</h3><h3>Sunday: Closed</h3></td>
             <td class="tablebody"><h2>508-555-5555</h2><h2>IG: @AZBarber</h2><h2>Facebook: @AZBarber</h2><h2>Twitter: @AZBarber</h2></td>
         </tr>
